small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <h1>welcome to tinbite web</h1>
+<h1>welcome to tinbite web</h1>
+<h1>welcome to tinbite web</h1>
+<h1>welcome to tinbite web</h1>
 <h2>fuk</h2>
 </body>
 </html>
